Fix footer form and change header colors for better contrast

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -20,7 +20,7 @@ body {
 
 h1 {
     font-family: var(--secondary-font);
-    color: #f79112;
+    color: var(--primary-color);
 }
 
 h2,
@@ -109,11 +109,11 @@ h3 {
 }
 
 #header h1 {
-    color: #f79112;
+    color: var(--highlight-color);
 }
 
 #header h3 {
-    color: var(--highlight-color);
+    color: var(--primary-color);
 }
 
 #header-text {
@@ -167,10 +167,11 @@ h3 {
 
 header h1 {
     text-transform: uppercase;
+    color: var(--highlight-color);
 }
 
 header h2 {
-    color: var(--highlight-color);
+    color: var(--primary-color);
 }
 
 .modal-header {
